add full validation
