# internal/domain/dto/order.go
@@ -9,15 +9,15 @@ type CustomerInfo struct {
 }
 
 type OrderDetails struct {
-	LeechSize1  int `json:"leech_size_1" v:"required|min:0#Leech size 1 is required|Leech size 1 must be positive"`
-	LeechSize2  int `json:"leech_size_2" v:"required|min:0#Leech size 2 is required|Leech size 2 must be positive"`
-	LeechSize3  int `json:"leech_size_3" v:"required|min:0#Leech size 3 is required|Leech size 3 must be positive"`
-	PackageType int `json:"package_type" v:"required|in:1,2,3,4#Package type is required|Invalid package type"`
+	LeechSize1  int `json:"leech_size_1" v:"required|min:0|max:500#Leech size 1 is required|Leech size 1 must be positive|Leech size 1 must be at most 500"`
+	LeechSize2  int `json:"leech_size_2" v:"required|min:0|max:500#Leech size 2 is required|Leech size 2 must be positive|Leech size 2 must be at most 500"`
+	LeechSize3  int `json:"leech_size_3" v:"required|min:0|max:500#Leech size 3 is required|Leech size 3 must be positive|Leech size 3 must be at most 500"`
+	PackageType int `json:"package_type" v:"required|in:1,2,3,4#Package type is required|Invalid package type(1 / 2 / 3)"`
 }
 
 type CreateOrderRequest struct {
 	CustomerInfo CustomerInfo `json:"customer_info" v:"required#Customer information is required"`
-	OrderDetails OrderDetails `v:"required|min-leech-sum:55#Order details are required|Sum of all leeches must be at least 50"`
+	OrderDetails OrderDetails `v:"required|min-leech-sum:50|max-leech-sum:1000#Order details are required|Sum of all leeches must be at least 55|Sum of all leeches must be at most 1000"`
 }
 
 type CreateOrderResponse struct {
